<resources>
    <string name="app_name">movies</string>
    <string name="name">Pipoca Filmes</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="Forget_Password">Esqueceu a Senha?</string>
    <string name="login">Login</string>
    <string name="Not_registered_yet">Ainda não se registou? <b>CRIAR UMA CONTA</b></string>
    <string name="inconsistent_parameters">parâmetros inconsistentes</string>
    <string name="password_great">senha maior que 6 digitos</string>
    <string name="email_invalid">Email invalido</string>
    <string name="Email_registered">Email já cadastrado.</string>
    <string name="error_generic">Entre em Contato com os Desenvolvedores.</string>
    <string name="forgot_password">Esqueceu a Senha?</string>
    <string name="text_information_dialog_email">Não se preocupe, isso acontece com o melhor de nós.\n Insira seu Email logo abaixo.</string>
    <string name="create_account">Criar Conta</string>
    <string name="confirm_password">Confirme a Senha</string>
    <string name="text_information_check_email">Cheque Sua Caixa De Email</string>
    <string name="text_information_about_sending_email">Enviamos um Mensagem para o Email informado, acesse-o e terá a possibilidade de alterar sua senha.</string>
    <string name="search">Pesquisa</string>
    <string name="home">Home</string>
    <string name="user">Usuário</string>
    <string name="search_not_found">Desculpe, não conseguimos \n encontrar o filme :(</string>
    <string name="information_search">Encontre o seu filme por tipo de título,\n categorias, anos, etc.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>