<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_secondary"
    tools:context=".view.user.ForgotPasswordActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/password_recovery_illustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/forgot_password"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/image_forgot_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_information_dialog_email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_forgot_edit_text"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:layout_marginTop="26dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_information" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/gray_main"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:text="Enviar"
        android:textAllCaps="false"
        android:textColor="@color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>